# school

./: readme.md
ALGA - Dungeon/: .gitignore  ALGA-dungeon.sln
CPP - Pirate/: .gitattributes  .gitignore  CPP-Pirate.sln  README.md
CPP2 - Machiavellli/: .gitignore  CMakeLists.txt  main.cpp
CPP2 - Machiavellli/assets/: bouwkaarten.csv  karakterkaarten.csv
CPP2 - Machiavellli/src/: defines.h
CPP2 - Machiavellli/src/Cards/: Architect.cpp  Architect.h  Assassin.cpp  Assassin.h  King.cpp  King.h  Mage.cpp  Mage.h  Mercenary.cpp  Mercenary.h  Merchant.cpp  Merchant.h  Preacher.cpp  Preacher.h  Thief.cpp  Thief.h
CPP2 - Machiavellli/src/Cards/Base/: BuildingCard.cpp  BuildingCard.h  CharacterCard.cpp  CharacterCard.h
CPP2 - Machiavellli/src/Cards/Decks/: BuildingDeck.cpp  BuildingDeck.h  CharacterDeck.cpp  CharacterDeck.h
CPP2 - Machiavellli/src/Models/: Card.h  Game.cpp  Game.h  Player.cpp  Player.h  State.cpp  State.h  Turn.cpp  Turn.h
CPP2 - Machiavellli/src/Server/: CircularBuffer.h  ClientCommand.h  ClientInfo.h  Socket.cpp  Socket.h  Sync_queue.h  throw.cpp  throw.h
CPP2 - Machiavellli/src/States/: BuildBuildingState.cpp  BuildBuildingState.h  EnemyInfoState.cpp  EnemyInfoState.h  GameInitState.cpp  GameInitState.h  GameOverState.cpp  GameOverState.h  LobbyState.cpp  LobbyState.h  PickBuildingCardState.cpp  PickBuildingCardState.h  RoundInitState.cpp  RoundInitState.h  RoundState.cpp  RoundState.h
CPP2 - Machiavellli/src/States/Abilities/: BuildingCardSwapState.cpp  BuildingCardSwapState.h  BuildingCardTradeState.cpp  BuildingCardTradeState.h  BuildingRemovalState.cpp  BuildingRemovalState.h  MurderState.cpp  MurderState.h  StealState.cpp  StealState.h
CPP2 - Machiavellli/src/Utilities/: Random.cpp  Random.h
CPP2 - Machiavellli/src/Utilities/File/: CsvReader.cpp  CsvReader.h
DB4 - Importer/: .env.example  .gitignore
DP1 - Circuit/: .gitignore
DPA - Musicsheets/: .gitignore  DPA_Musicsheets_Startup.sln
DPINT - Sudoku/: Sudoku.sln  Sudoku.sln.DotSettings
KMINT - Bunny Island/: CMakeLists.txt  README.md  main.cpp
KMINT - Bunny Island/modules/: FindSDL2IMG.cmake
KMINT - Bunny Island/src/: astar.cpp  astar.h  board.cpp  board.h  defines.h  entities.cpp  entities.h  graph.cpp  graph.h  logger.cpp  logger.h  random.cpp  random.h  renderer.cpp  renderer.h  require.h  window.cpp  window.h
KMINT - Bunny Island/src/board pieces/: cave.cpp  cave.h  misses_janssen.cpp  misses_janssen.h  mister_janssen.cpp  mister_janssen.h  rabbit.cpp  rabbit.h  schaap.cpp  schaap.h
KMINT - Bunny Island/src/board pieces/base/: board_piece.h  free_roaming_board_piece.h  graph_bound_board_piece.cpp  graph_bound_board_piece.h  person.cpp  person.h  static_board_piece.h
KMINT - Bunny Island/src/drawables/: graph_drawable.cpp  graph_drawable.h  path_drawable.cpp  path_drawable.h  rabbit_drawable.cpp  rabbit_drawable.h  rect_drawable.cpp  rect_drawable.h
KMINT - Bunny Island/src/drawables/base/: combined_drawable.cpp  combined_drawable.h  drawable.cpp  drawable.h
KMINT - Bunny Island/src/force driven/: moving_entity.cpp  moving_entity.h  steering_behaviors.cpp  steering_behaviors.h
KMINT - Bunny Island/src/internal/: base_systems.cpp  base_systems.h  surface.cpp  surface.h  texture.cpp  texture.h
KMINT - Bunny Island/src/models/: astar_node.h  color.h  edge.cpp  edge.h  matrix2d.h  node.h  point.cpp  point.h  range.h
KMINT - Bunny Island/src/population/: genetics.cpp  genetics.h  rabbit_population.cpp  rabbit_population.h
KMINT - Bunny Island/src/population/base/: population.h
KMINT - Bunny Island/src/states/base/: state.h  state_machine.h
KMINT - Bunny Island/src/states/misses janssen/: misses_janssen_frozen_state.cpp  misses_janssen_frozen_state.h  misses_janssen_wandering_state.cpp  misses_janssen_wandering_state.h
KMINT - Bunny Island/src/states/mister janssen/: mister_janssen_photoshooting_state.cpp  mister_janssen_photoshooting_state.h  mister_janssen_wandering_state.cpp  mister_janssen_wandering_state.h
KMINT - Bunny Island/src/states/schaap/: schaap_global_state.cpp  schaap_global_state.h  schaap_hunting_state.cpp  schaap_hunting_state.h  schaap_sleepy_state.cpp  schaap_sleepy_state.h  schaap_thirsty_state.cpp  schaap_thirsty_state.h  schaap_wandering_state.cpp  schaap_wandering_state.h
LINAL - 3D Game/: .gitignore  CMakeLists.txt  LICENSE  main.cpp  readme.md
LINAL - 3D Game/modules/: DownloadProject.CMakeLists.cmake.in
LINAL - 3D Game/src/: defines.h
LINAL - 3D Game/src/Components/: Bullet.cpp  Bullet.h  Circle.cpp  Circle.h  Cube.cpp  Cube.h  Line.cpp  Line.h  Origin.cpp  Origin.h  Spaceship.cpp  Spaceship.h  Sphere.cpp  Sphere.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
LINAL - 3D Game/src/Controllers/: GameController.cpp  GameController.h
LINAL - 3D Game/src/Framework/: Component.cpp  Component.h  Controller.h  Engine.cpp  Engine.h  Random.cpp  Random.h  Window.cpp  Window.h
LINAL - 3D Game/src/Models/: Camera.cpp  Camera.h  Matrix.cpp  Matrix.h  Point.cpp  Point.h  Vector.cpp  Vector.h
LINAL - 3D Game/tests/: matrixTests.cpp  tests.cpp  vectorTests.cpp
MBD1 - Diary Manager - API/: .editorconfig  .gitignore  .travis.yml  LICENSE  README.md  bower.json  helpers.js  index.js  package.json
MBD1 - Diary Manager - App/: .gitignore  README.md  bower.json  config.xml  ionic.config.json  package.json
MBD2 - Spotify Android/: README.md
MODL3 - Gold Rush/: Goud Koorts.sln
MODL3 - Sokoban/: .gitignore  Game_MoveMonkey.sequencediagram  Game_MoveMonkey.sequencediagram.layout  Sokoban.sln
PROG5 - Ninja/: prog5-ninja.sln  prog5-ninja.sln.DotSettings
PROG6 - Tamagotchi/: .gitignore  prog6-tamagotchi.sln  prog6-tamagotchi.sln.DotSettings
PROJ1 - VTa - De Slimste Mens/: LICENSE  README.md
PROJ2 - SOg - Wijkwerkplaats Oost/: .env.example  .env.travis  .gitignore  .travis.yml  .zipignore  composer.json  (+2 more)
(+1568 files in other folders)
